Version 7.8.7
-------------

-

Version 7.8.6
-------------

- Automatically collect device information in ``contexts`` field on Android.
- Updated Jackson, slf4j, log4j2 and logback dependencies.

Version 7.8.5
-------------

- Add optional ``body`` field to HttpInterface.
- Fix name of the lockdown logger.

Version 7.8.4
-------------

- Add ``contexts`` field support to Events.
- Add ``com.getsentry.raven.Raven.lockdown`` logger that can be disabled to ignore warning messages
  on each attempted Event send when Raven is in lockdown mode.

Version 7.8.3
-------------

- Add User to RavenContext and ContextBuilderHelper. (thanks mpecan)
- Drop Events when the connection is locked down, users must enable buffering to attempt to resend later.
- Respect the Sentry server's ``Retry-After`` header.

Version 7.8.2
-------------

- Fix race condition, ensuring Raven initialization is synchronized in appenders. (thanks OutOfBrain)
- Allow use of custom AndroidRavenFactory. (thanks kassim)
- Add ``sdk`` field to payload, identify subprojects in SDK name.
- Add ``raven.sample.rate`` DSN option to optionally reduce the number of events sent to the server.

Version 7.8.1
-------------

- Make Breadcrumbs serializable.
- Don't log errors in RavenServletRequestListener if Raven hasn't been initialized.

Version 7.8.0
-------------

- Add Android support under the ``raven-android`` subproject.
- Add Filters to drop all Raven logs before they go to the Sentry server.
- Loosen permission on some Appender/Handler methods to allow for easier overriding. (thanks briprowe)

Version 7.7.1
-------------

- Add ``raven.maxmessagelength`` DSN option. (thanks vektory79)
- Add ``Buffer`` interface, used to store events that fail to be sent to the Sentry server.
  Includes a DiskBuffer implementation and related ``raven.buffer.*`` options.
- Broke out many helper methods inside of ``DefaultRavenFactory`` to allow for easier
  overrides.